2003-01-22  Zdravko Tashev <ztashev@openlinksw.co.uk>

	* Xml.cs: a few fixes.

2003-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: handle the exception when adding new keys to
	DataKeysArray.

2003-01-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseDataList.cs: what can I say for this one? I spent so many time
	until I finally found this that I'm gonna miss this f....g bug... ;-).
	Farewell. Now we can get events from image buttons inside Data*.

	* DataList.cs: now the value stored in ViewState for item count is
	correct.

2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGrid.cs: default value for ShowHeaders is true. Fixed style for
	Header and Footer.
	* DataGridColumn.cs: added SetOwner method.
	* DataGridColumnCollection.cs: set the owner of the column when added.

2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BoundColumn.cs: typo.
	* DataGrid.cs: use 'as' instead of casting. Typo.
	* HyperLinkColumn.cs: call OnColumnChanged when any property change.
	Mono-stylized.

2003-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HyperLink.cs: fixes bug #36336.

2003-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: fixed IRepeatInfoUser.GetItemStyle.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseValidator.cs: return an empty string in GetControlValidationValue
	when GetValue returned null.

	* CompareValidator.cs: fixed EvaluateIsValid.

	* RegularExpressionValidator.cs: fixed EvaluateIsValid.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Xml.cs: use MapPathSecure to get the path of the document.

2002-12-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: fixed header & footer.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: for header and footer don't use data source.
	Instantiate in the DataListItem, not in the DataList.
	databind-template.aspx works now.
